--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
 title: Create a link to another webpage
 hero_image: images/banner.png
-description: Create a link to another webpage
+description: Create a link to another webpage.
 version: 4
 listed: false
 copyedit: false
